--- a/pom.xml
+++ b/pom.xml
@@ -586,7 +586,7 @@
                                 <arg>/entrypoint.sh</arg>
                             </entrypoint>
                             <ports>
-                                <port>8080</port>
+                                <port>8090</port>
                             </ports>
                             <environment>
                                 <SPRING_OUTPUT_ANSI_ENABLED>ALWAYS</SPRING_OUTPUT_ANSI_ENABLED>
@@ -1064,7 +1064,7 @@
                                 <url>jdbc:mysql://localhost:3306/NaariDeals</url>
                                 <defaultSchemaName>NaariDeals</defaultSchemaName>
                                 <username>root</username>
-                                <password></password>
+                                <password>Guruclasstime!23</password>
                                 <referenceUrl>hibernate:spring:com.deals.naari.domain?dialect=org.hibernate.dialect.MySQL8Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                                 <verbose>true</verbose>
                                 <logging>debug</logging>
