--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,28 @@
             "main": "src/main/webapp/main.ts",
             "polyfills": "src/main/webapp/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "allowedCommonJsDependencies": [
+              "mousetrap",
+              "hammerjs",
+              "CommonJS",
+              "ngrx-etc",
+              "@ks89/angular-modal-gallery",
+              "lodash",
+              "color",
+              "jquery",
+              "rxjs",
+              "rxjs/operators",
+              "rxjs/Subject",
+              "rxjs/Subscription",
+              "c3",
+              "date-fns",
+              "rxjs-compat",
+              "angular-calendar",
+              "chart.js",
+              "@mattlewis92/dom-autoscroller",
+              "aws-sdk",
+              "aws-sdk/clients/s3"
+            ],
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/main/webapp/content",
