--- a/package.json
+++ b/package.json
@@ -102,7 +102,9 @@
     "ngx-infinite-scroll": "14.0.0",
     "ngx-webstorage": "10.0.1",
     "rxjs": "7.5.6",
+    "sockjs-client": "1.5.0",
     "tslib": "2.4.0",
+    "webstomp-client": "^1.2.6",
     "zone.js": "0.11.6"
   },
   "devDependencies": {
@@ -119,6 +121,7 @@
     "@types/mocha": "8.2.0",
     "@types/node": "16.11.56",
     "@types/selenium-webdriver": "4.0.11",
+    "@types/sockjs-client": "1.5.0",
     "@typescript-eslint/eslint-plugin": "5.36.1",
     "@typescript-eslint/parser": "5.36.1",
     "browser-sync": "2.27.10",
